# RustBenchmarkStabilityThesis

./: .gitignore  Cargo.toml  build.rs  chrono.json  combine.json  get_permissions.sh  handlebars-rust.json  image.json  itertools.json  prost.json  pulldown-cmark.json  pyo3.json  rapl-read  repos.csv  rust-prometheus.json  targets.csv  tracing.json  tungstenite-rs.json
projects/baseline/: Cargo.toml
projects/baseline/benches/: nop.rs
src/: collect.rs  cov.rs  coverage.rs  hirmir.rs  llvmcovdata.rs  main.rs  parse.rs  probe.rs  project.rs  stats.rs
src/data/: compileroutput.rs  llvmcovdata.rs  mod.rs  project.rs  syn_visit.rs
src/obsolete/: callgrind.rs  cov.rs  git.rs  node_types.rs  probe.rs  rapl-read.c  stats.rs
