[package]
name = "scrape-crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "power"
path = "src/main.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"


[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true

[dependencies]
crates_io_api = { version = "0.8.1", default-features = false, features = ["rustls"] }

serde = { version = "1", features = ["derive"] }
csv = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4.3"
#octocrab = "0.18.1"
futures = "0.3"
tokio = {version = "1.22.0", features = ["full"]}
regex = "1.7.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0"
itertools = "0.10.5"
perf-event-open-sys = "4.0.0"
statrs = "0.16.0"
rstats = "1.2.22"
#rust-code-analysis = "0.0.25"
cargo_toml = "0.14.0"
ra_ap_rust-analyzer = {version="0.0.149"}
ra_ap_project_model = "0.0.149"
ra_ap_hir = "0.0.149"
ra_ap_paths = "0.0.149"
ra_ap_vfs = "0.0.149"
ra_ap_ide = "0.0.149"
ra_ap_syntax = "0.0.149"
clap = { version = "4.1.8", features = ["derive"] }
linux-perf-data = "0.8.0"
nix = { version = "0.26.2", features = ["fs"] }
tempfile = "3.5.0"
chrono = "0.4.24"
caps = "0.5.5"
indicatif = "0.17.3"
syscalls = { version = "0.6.10", features = ["x86_64"] }
byteorder = "1.4.3"
rustc-demangle = "0.1.23"
serde_tuple = "0.5.0"
