[package]
name = "baseline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"
criterion-energy = {path = '/home/rens/thesis/criterion-energy', features = ['criterion4']}


[[bench]]
name = "nop"
harness = false